# newProyectoTeam3

./: CMakeLists.txt  Documentacion del Codigo.html  Documentacion del Proyecto.html  Documentacion.md  README.md  README_ES.md  TestCases.cpp  config.json  main.cpp  main.py  textGenerator.py
.other/: Documentacion.md  Student Class.txt  path_verifier.txt  read_file.txt  write_file.txt
Modulos/: FileParser.cpp  FileParser.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  HeaderMaker.cpp  HeaderMaker.h  Students.cpp  Students.h  TableHeaderExtractor.cpp  TableHeaderExtractor.h
PARA ENTREGAR/: COMP3800[Nombre]Cpp03.cpp
PARA ENTREGAR/COMP3800[Nombre]Cpp03/: COMP3800[Nombre]Cpp03.xlsx
PARA ENTREGAR/COMP3800[Nombre]Cpp03/Resources/Data/: test0.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt
Resources/Data/: ejemploDatos.txt  ejemploDatos_TEST.txt  test9.txt
Resources/Output/: ejemploDatos.csv  test1.csv  test9.csv
